--- a/_config.yml
+++ b/_config.yml
@@ -160,6 +160,11 @@ announcements:
   scrollable: true # adds a vertical scroll bar if there are more than 3 news items
   limit: 5 # leave blank to include all the news in the `_news` folder
 
+demos:
+  enabled: true
+  scrollable: true
+  limit: 3
+
 interns:
   enabled: true
   scrollable: true
